--- a/app.yaml
+++ b/app.yaml
@@ -22,19 +22,13 @@ handlers:
 
 #all requests goto index html for react routes 
 - url: /
-  static_files: index.php
-  upload: index.php
-  secure: always
+  script: index.php
   
 - url: /wiki
-  static_files: wiki/index.php
-  upload: wiki/index.php  
-  secure: always
+  script: wiki/index.php
   
-- url: /wiki/installation/
-  static_files: wiki/installation.php
-  upload: wiki/installation.php
-  secure: always
+- url: /wiki/installation
+  script: wiki/installation.php
   
 - url: /wiki/virtual-box-installation
   script: wiki/virtual-box-installation.php
