--- a/app.yaml
+++ b/app.yaml
@@ -1,94 +1,7 @@
 runtime: php74
 
-handlers:
-
-#below is for landing page urls
-- url: /(.*\.(ico|jpg|jpeg|png|gif|woff|woff2|ttf|otf|eot|svg|js|css))$
-  static_files: \1
-  upload: .*\.(ico|jpg|jpeg|png|gif|woff|woff2|ttf|otf|eot|svg|js|css)$
-  secure: always
-
-#below is for /routes urls that find font files in react dinamic routes 
-- url: /(.*)/(.*\.(ico|jpg|jpeg|png|gif|woff|woff2|ttf|otf|eot|svg|js|css))$
-  static_files: \1
-  upload: (.*)/.*\.(ico|jpg|jpeg|png|gif|woff|woff2|ttf|otf|eot|svg|js|css)$
-  secure: always
-
-- url: /apple-app-site-association
-  static_files: apple-app-site-association
-  mime_type: application/json
-  upload: apple-app-site-association
-  secure: always
-
-#all requests goto index html for react routes 
-- url: /
-  script: index.php
-  
-- url: /wiki
-  script: wiki/index.php
-  
-- url: /wiki/installation
-  script: wiki/installation.php
-  
-- url: /wiki/virtual-box-installation
-  script: wiki/virtual-box-installation.php
-
-- url: /wiki/vidoo-login
-  script: wiki/vidoo-login.php
-
-- url: /wiki/vidoo-interface
-  script: wiki/vidoo-interface.php
-  
-- url: /wiki/contact-us
-  script: wiki/contact-us.php
-
-#as below each folders and subfolders must be added as static
-#if folder structure change, that folders must be added as below format
-- url: /assets
-  static_dir: assets
-  secure: always
-
-- url: /assets/fonts
-  static_dir: assets/fonts
-  secure: always
-
-- url: /assets/images
-  static_dir: assets/images
-  secure: always
-  
-- url: /assets/css
-  static_dir: assets/css
-  secure: always
-  
-- url: /assets/fontawesome/js
-  static_dir: assets/fontawesome/js
-  secure: always
-  
-- url: /assets/fontawesome/css
-  static_dir: assets/fontawesome/css
-  secure: always
-  
-- url: /assets/js
-  static_dir: assets/js
-  secure: always
-  
-- url: /assets/plugins
-  static_dir: assets/plugins
-  secure: always
-  
-- url: /assets/plugins/bootstrap/css
-  static_dir: assets/plugins/bootstrap/css
-  secure: always
-  
-- url: /assets/plugins/bootstrap/js
-  static_dir: assets/plugins/bootstrap/js
-  secure: always
-  
-- url: /assets/plugins/jquery-scrollTo
-  static_dir: assets/plugins/jquery-scrollTo
-  secure: always
-  
-- url: /assets/plugins/stickyfill/dist
-  static_dir: assets/plugins/stickyfill/dist
-  secure: always
-  
+# Defaults to "serve index.php" and "serve public/index.php". Can be used to
+# serve a custom PHP front controller (e.g. "serve backend/index.php") or to
+# run a long-running PHP script as a worker process (e.g. "php worker.php").
+#
+# entrypoint: serve index.php
